2008-04-13  Kolja Waschk <kawk>

  * src/tap/parport/ftd2xx.c, src/tap/usbconn/libusb.c, src/lib/fclock.c,
    src/jtag.c, src/flash/amd_flash.c, src/flash/amd.c, src/flash/jedec.c,
    src/svf/svf.c, configure.ac, doc/UrJTAG.txt: Provide variants of
	  usleep, frealtime, mkdir for [ 1838732 ] EXE built with MinGW

2008-04-11  Kolja Waschk <kawk>

   * src/bsdl/bsdl.c, src/tap/parport/ftd2xx.c, src/tap/parport/ftdi.c,
     src/tap/usbconn/libusb.c, src/lib/fclock.c, src/jtag.c:
     [ 1940323 ] OS X support for UrJTAG (by Ville Voipio)

2008-04-11  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/parport/ftdi.c (ftdi_flush_output): removed unused variables

2008-04-11  Jie Zhang  <jie.zhang@analog.com>

   From Michael Hennerich <michael.hennerich@analog.com>
   * src/tap/parport/ftdi.c (ftdi_generic_open): Detect
     BFIN-UJTAG cable.
   * src/tap/cable.c (ft2232_bfin_ujtag_cable_driver): Declare.
     (cable_drivers): Add ft2232_bfin_ujtag_cable_driver.
   * src/tap/cable/ft2232.c (BIT_BFIN_UJTAG_nTRST,
     BIT_BFIN_UJTAG_nLED, BITMASK_BFIN_UJTAG_nTRST,
     BITMASK_BFIN_UJTAG_nLED): Define.
     (ft2232_bfin_ujtag_init): New.
     (ft2232_bfin_ujtag_done): New.
     (ft2232_bfin_ujtag_cable_driver): Define.

2008-04-10  Jie Zhang  <jie.zhang@analog.com>

   * src/flash/flash.c (flashmem): Show the address when verifying.
     Show the end address when program and verify complete.

2008-04-10  Jie Zhang  <jie.zhang@analog.com>

   From Stefan Pledl  <stefan.pledl@mesutronic.de>
   * src/bsdl2jtag.c (endline): Set mode to 0 for INSTRUCTION_LENGTH
     and BOUNDARY_LENGTH attributes.
   * data/atmel/atf15xx/STEPPINGS: New file.
   * data/atmel/atf15xx/atf1504asv: New file.
   * data/atmel/PARTS: Add atf15xx.
   * data/Makefile.am (nobase_dist_pkgdata_DATA): Add
     atmel/atf15xx/STEPPINGS and atmel/atf15xx/atf1504asv.

2008-04-09  Jie Zhang  <jie.zhang@analog.com>

   * src/bus/bf537_stamp.c (bf537_stamp_bus_new_1): Renamed